# cxxplot

./: .clang-format  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
cmake/: CompilerWarnings.cmake  ProjectDependencies.cmake
dependencies/: CMakeLists.txt
doc/: DEVELOPING.md  EXAMPLES.md  INSTALL.md
examples/: CMakeLists.txt  axis_1.cpp  bar_1.cpp  example_1.cpp  example_2.cpp  example_3.cpp  histogram_1.cpp  imshow_1.cpp  plot_1.cpp  plot_add_data_in_loop.cpp  plot_add_extra_data.cpp  plot_block.cpp  plot_extra_arguments.cpp  save_plot_1.cpp  scatter_1.cpp  subplots.cpp
include/: Graph.hpp  Matplotlib.hpp  PythonInterpreter.hpp  cxxplot.hpp  ddldefines.hpp
include/generic/: ConvertToNumpy.hpp  PythonCalls.hpp  convertToNumpy.hpp
include/pyplot/: Axis.hpp  Bar.hpp  Histogram.hpp  Imshow.hpp  Kwargs.hpp  Plot.hpp  Pyplot.hpp  Scatter.hpp  Subplot.hpp  Subplots.hpp
source/: CMakeLists.txt  Graph.cpp  Matplotlib.cpp  PythonInterpreter.cpp
source/generic/: ConvertToNumpy.cpp  PythonCalls.cpp  pythonCalls.cpp
source/pyplot/: Axis.cpp  Bar.cpp  Histogram.cpp  Imshow.cpp  Kwargs.cpp  Plot.cpp  Pyplot.cpp  Scatter.cpp  Subplot.cpp  Subplots.cpp
tests/: CMakeLists.txt  test_python_interpreter.cpp
